# PymiRa

./: LICENSE  README.md  bwt_parallel.py  chimira_formatted_V2.py  pymira_v1.py  pyproject.toml
Data/: Figure 5AB - quant_stats.csv  Figure 5C - quantitative_benchmarking_simulated_dataset.csv  Figure S2A - miRNA_proportions.xlsx  Figure S2B -Fold change raw data.xlsx  figure_4a_timings.csv  figure_4b_timings.csv  pymira_analysis_script.Rmd
Data/MiRNA counts/: BT2_10M_simulated_reads_consolidated_counts.txt  CHI_10M_simulated_reads_counts.txt  PY_10M_simulated_reads_counts.txt  real_simulated_mirna_counts.csv
Data/simulated_dataset/: real_simulated_mirna_consolidated_counts.csv  simulated_10M_bt2_std_FC_mature_consolidated_counts.txt  simulated_10M_bt2_vsl_FC_mature_consolidated_counts.txt  simulated_10M_chimira_mature_consolidated_counts.txt  simulated_10M_mirdeep2_mature_consolidated_counts.txt  simulated_10M_reads_bt2_FC_local_N1_mature_consolidated_counts.txt  simulated_10M_reads_bt2_VSL_htseq_mature_consolidated_counts.txt  simulated_10M_reads_bt2_std_htseq_mature_consolidated_counts.txt  simulated_10M_reads_pymira_mature_consolidated_counts.txt
examples/: example_input.fa  example_output_mirna_flag_pymira_alignment_summary.json  example_output_mirna_flag_pymira_counts.txt  example_output_mirna_flag_pymira_log.json  example_output_pymira_alignment_summary.json  example_output_pymira_counts.txt  example_output_pymira_log.json  mirbase_hsa_hairpin.fa
src/PymiRa/: cli.py  (+1 more)
src/PymiRa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+39 files in other folders)
