[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PymiRa"
version = "0.1.0"
description = "A rapid sequence aligner for small RNAs."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Zachary Scurlock", email = "zs395@cam.ac.uk"}
]
dependencies = [
    "numpy >=1.23.5", "pandas >= 1.5.2","partial>=1.0"  # example dependency
]

[project.scripts]
pymira='PymiRa.cli:main'
